implemented HATEOAS at ParkingSpace